--- a/AdminPage.ui
+++ b/AdminPage.ui
@@ -78,7 +78,7 @@
        </widget>
       </item>
       <item row="0" column="0">
-       <widget class="QPushButton" name="clientInfo">
+       <widget class="QPushButton" name="userInfo">
         <property name="text">
          <string>Вывести информацию о клиентах</string>
         </property>
