--- a/AdminPage.ui
+++ b/AdminPage.ui
@@ -49,31 +49,10 @@
     </item>
     <item>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="4" column="0">
-       <widget class="QPushButton" name="addDeposit">
-        <property name="text">
-         <string>Добавить новый вклад</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="0">
-       <widget class="QPushButton" name="addCredit">
-        <property name="text">
-         <string>Добавить новый кредит</string>
-        </property>
-       </widget>
-      </item>
       <item row="1" column="0">
        <widget class="QPushButton" name="creditList">
         <property name="text">
          <string>Вывести список оформленных кредитов</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QPushButton" name="depositList">
-        <property name="text">
-         <string>Вывести список активных вкладов</string>
         </property>
        </widget>
       </item>
@@ -84,8 +63,29 @@
         </property>
        </widget>
       </item>
+      <item row="2" column="0">
+       <widget class="QPushButton" name="depositList">
+        <property name="text">
+         <string>Вывести список активных вкладов</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="creditSum">
+        <property name="text">
+         <string>TextLabel</string>
+        </property>
+       </widget>
+      </item>
       <item row="5" column="0">
        <widget class="QTableWidget" name="tableWidget"/>
+      </item>
+      <item row="4" column="0">
+       <widget class="QLabel" name="depositSum">
+        <property name="text">
+         <string>TextLabel</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
