--- a/ThanksCreditPage.ui
+++ b/ThanksCreditPage.ui
@@ -75,7 +75,7 @@
     <item row="2" column="0">
      <widget class="QLabel" name="label_4">
       <property name="text">
-       <string>Срок кредита</string>
+       <string>Срок кредита (лет)</string>
       </property>
      </widget>
     </item>
