--- a/ThanksCreditPage.ui
+++ b/ThanksCreditPage.ui
@@ -67,7 +67,7 @@
      </widget>
     </item>
     <item row="1" column="1">
-     <widget class="QLineEdit" name="sumline"/>
+     <widget class="QLineEdit" name="summaline"/>
     </item>
     <item row="2" column="0">
      <widget class="QLabel" name="label_4">
@@ -77,7 +77,7 @@
      </widget>
     </item>
     <item row="2" column="1">
-     <widget class="QLineEdit" name="creditline"/>
+     <widget class="QLineEdit" name="longline"/>
     </item>
     <item row="3" column="0">
      <widget class="QLabel" name="label_5">
@@ -97,11 +97,11 @@
      </widget>
     </item>
     <item row="4" column="1">
-     <widget class="QLineEdit" name="lineEdit_4"/>
+     <widget class="QLineEdit" name="monthpayline"/>
     </item>
    </layout>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="acceptButton">
    <property name="geometry">
     <rect>
      <x>335</x>
